Test improvement and refactoring