@@ -1,13 +1,14 @@
 package com.luv2code.travelchecker.controller;
 
-import com.fasterxml.jackson.databind.ObjectMapper;
 import com.luv2code.travelchecker.domain.Role;
 import com.luv2code.travelchecker.domain.User;
 import com.luv2code.travelchecker.domain.enums.RoleType;
 import com.luv2code.travelchecker.dto.role.RoleGetDto;
 import com.luv2code.travelchecker.dto.user.UserGetDto;
-import com.luv2code.travelchecker.dto.user.UserPostDto;
+import com.luv2code.travelchecker.repository.UserRepository;
+import com.luv2code.travelchecker.service.AuthenticationService;
 import com.luv2code.travelchecker.service.UserService;
+import com.luv2code.travelchecker.util.JwtTokenUtil;
 import com.luv2code.travelchecker.util.RoleUtil;
 import com.luv2code.travelchecker.util.UserUtil;
 import org.hamcrest.CoreMatchers;
@@ -16,7 +17,6 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.BDDMockito;
-import org.mockito.Mockito;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
@@ -29,30 +29,35 @@ import org.springframework.test.web.servlet.request.MockHttpServletRequestBuilde
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultMatchers;
 
-import java.time.LocalDateTime;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+
+import static com.luv2code.travelchecker.util.SecurityConstants.HEADER_NAME;
+import static com.luv2code.travelchecker.util.SecurityConstants.TOKEN_PREFIX;
 
 @SpringBootTest
 @AutoConfigureMockMvc
 @ExtendWith(SpringExtension.class)
-public class AuthorizationControllerTest {
+public class AuthenticatedUserControllerTest {
 
     @Autowired
     private MockMvc mockMvc;
 
-    @Autowired
-    private ObjectMapper objectMapper;
+    @MockBean
+    private UserRepository userRepository;
 
     @MockBean
     private UserService userService;
 
     @MockBean
+    private AuthenticationService authenticationService;
+
+    @MockBean
     private ModelMapper modelMapper;
 
-    private UserGetDto userGetDto;
-    private UserPostDto userPostDto;
+    private User me;
+
+    private static final String USER_JWT_TOKEN = JwtTokenUtil.createUserToken("john.doe@gmail.com");
 
     @BeforeEach
     public void setup() {
@@ -61,39 +66,36 @@ public class AuthorizationControllerTest {
 
         // RoleGetDto
         final RoleGetDto userRoleDto = RoleUtil.createRoleGetDto(userRole);
-        final List<RoleGetDto> dtoRoles = Collections.singletonList(userRoleDto);
+        final List<RoleGetDto> rolesDto = List.of(userRoleDto);
 
         // User
-        final User user = UserUtil.createUser(1L, "John", "Doe", "john.doe@gmail.com", "$2a$12$oF1jOLdVHnoWwEYQwYeJN.icSl.Xs6SKiZ1WZTutygOUrXwh.Mhdu");
-        user.setRoles(Collections.singleton(userRole));
-        user.setMarkers(null);
+        me = UserUtil.createUser(1L, "John", "Doe", "john.doe@gmail.com", "$2a$12$Gw9o/me9.BOeI5a40v7Reuxc5GyOdAMXUDWDnIWZFa6LM9HLeiyc6");
+        me.setRoles(Collections.singleton(userRole));
+        me.setMarkers(null);
 
         // UserGetDto
-        userGetDto = UserUtil.createUserGetDto(user.getId(), user.getFirstName(), user.getLastName(), user.getEmail(), dtoRoles, new ArrayList<>());
+        final UserGetDto meDto = UserUtil.createUserGetDto(me.getId(), me.getFirstName(), me.getLastName(), me.getEmail(), rolesDto, null);
 
-        // UserPostDto
-        userPostDto = UserUtil.createUserPostDto(user.getFirstName(), user.getLastName(), user.getEmail(), "#Password1234", LocalDateTime.now());
-
-        BDDMockito.given(modelMapper.map(Mockito.any(), Mockito.any())).willReturn(user).willReturn(userGetDto);
-        BDDMockito.given(userService.save(user)).willReturn(user);
+        BDDMockito.given(userRepository.findByEmail(me.getEmail())).willReturn(java.util.Optional.of(me));
+        BDDMockito.given(authenticationService.getAuthenticatedEmail()).willReturn(me.getEmail());
+        BDDMockito.given(userService.findByEmail(me.getEmail())).willReturn(me);
+        BDDMockito.given(modelMapper.map(me, UserGetDto.class)).willReturn(meDto);
     }
 
     @Test
-    @DisplayName("POST /authorization")
-    public void should_Authorize_User() throws Exception {
-        final String content = objectMapper.writeValueAsString(userPostDto);
-
-        final MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders.post("/authorization")
+    @DisplayName("GET /auth/me")
+    public void should_Get_My_Auth_Details() throws Exception {
+        final MockHttpServletRequestBuilder requestBuilder = MockMvcRequestBuilders.get("/auth/me")
+                .header(HEADER_NAME, TOKEN_PREFIX + USER_JWT_TOKEN)
                 .contentType(MediaType.APPLICATION_JSON)
-                .accept(MediaType.APPLICATION_JSON)
-                .content(content);
+                .accept(MediaType.APPLICATION_JSON);
 
         this.mockMvc
                 .perform(requestBuilder)
-                .andExpect(MockMvcResultMatchers.status().isCreated())
+                .andExpect(MockMvcResultMatchers.status().isOk())
                 .andExpect(MockMvcResultMatchers.jsonPath("id", CoreMatchers.is(1)))
-                .andExpect(MockMvcResultMatchers.jsonPath("firstName", CoreMatchers.is(userGetDto.getFirstName())))
-                .andExpect(MockMvcResultMatchers.jsonPath("lastName", CoreMatchers.is(userGetDto.getLastName())))
-                .andExpect(MockMvcResultMatchers.jsonPath("email", CoreMatchers.is(userGetDto.getEmail())));
+                .andExpect(MockMvcResultMatchers.jsonPath("firstName", CoreMatchers.is(me.getFirstName())))
+                .andExpect(MockMvcResultMatchers.jsonPath("lastName", CoreMatchers.is(me.getLastName())))
+                .andExpect(MockMvcResultMatchers.jsonPath("email", CoreMatchers.is(me.getEmail())));
     }
 }
